js optimize parsing of function